# aggforce-legacy

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: black.yml  ci.yml  lint.yml
examples/: cv_feat.py
examples/chignolin/: force_map_constraint_optim_force_aggr.npy  plot_chignolin.ipynb
examples/water/: .gitignore  README.md  model.py  plot_water.ipynb  pmf_flexible.npz  pmf_rigid.npz  simulate.py  train.py  train_all.py  util.py  water_plots.ipynb
src/aggforce/: __init__.py  agg.py  constfinder.py  dtjaxfeat.py  featlinearmap.py  jaxfeat.py  jaxmapval.py  linearmap.py  map.py
tests/: test_agg.py  test_forces.py
tests/data/: cln_basic_force_mat.txt  cln_opt_force_mat.txt  test_readme.py  waterdimer.npz
