[metadata]
name = forcemap
version = 0.0.1
author = Aleksander Evren Paetzold Durumeric
author_email = alekepd@gmail.com
description = A small package to aggregate forces from molecular dynamics simulations for potential of mean force estimation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alekepd/aggforce
project_urls =
    Bug Tracker = https://github.com/alekepd/aggforce/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
