[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = aggforce
version = 0.0.1
author = Aleksander Evren Paetzold Durumeric
author_email = alekepd@gmail.com
description = A small package to aggregate forces from molecular dynamics simulations for potential of mean force estimation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alekepd/aggforce
project_urls =
    Bug Tracker = https://github.com/alekepd/aggforce/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    typing_extensions
    numpy
    qpsolvers
    osqp

[options.extras_require]
nonlinear = 
    typing_extensions
    numpy
    qpsolvers
    osqp
    jax[cpu]
    scipy
test = 
    typing_extensions
    numpy
    qpsolvers
    osqp
    scs
    jax[cpu]
    scipy
    mdtraj
    pytest

[options.packages.find]
where = src
